--- a/app/templates/agendas.hbs
+++ b/app/templates/agendas.hbs
@@ -15,9 +15,14 @@
         class="auk-o-flex"
       >
         {{#if this.filterAgendas}}
-          <Auk::Button @icon="redo" @layout="icon-only" @skin="muted-borderless" {{on "click" this.clearFilter}}>
+          <AuButton
+            @skin="naked"
+            @icon="undo"
+            @hideText={{true}}
+            {{on "click" this.clearFilter}}
+          >
             {{t "clear-filter"}}
-          </Auk::Button>
+          </AuButton>
         {{/if}}
         <Auk::Input
           data-test-route-agendas-overview-filter-input
@@ -33,9 +38,9 @@
       {{#if (user-may "manage-meetings")}}
         <Group.Item>
           <AuButton
+            data-test-route-agendas-new-meeting
             @skin="primary"
             @icon="plus"
-            data-test-route-agendas-new-meeting
             {{on "click" this.openNewSessionModal}}
           >
             {{t "new-agenda"}}
@@ -154,17 +159,19 @@
                     {{/if}}
                   </td>
                   <td class="auk-u-text-align--center">
-                    <Auk::Button
+                    <AuLink
                       data-test-route-agendas-overview-row-nav-button
-                      @skin="borderless"
-                      @layout="icon-only"
+                      @skin="button-naked"
                       @icon="chevron-right"
+                      @hideText={{true}}
                       @route="agenda.agendaitems"
                       @models={{array
                         agenda.createdFor.id
                         agenda.id
                       }}
-                    />
+                    >
+                      {{t "open"}}
+                    </AuLink>
                   </td>
                 </tr>
               {{/each}}
