--- a/app/templates/cases/overview.hbs
+++ b/app/templates/cases/overview.hbs
@@ -82,13 +82,15 @@
                 </Menu.Item>
               </Auk::DropdownMenu>
             {{/if}}
-            <Auk::Button
-              @skin="borderless"
-              @layout="icon-only"
+            <AuLink
+              @skin="button-naked"
               @icon="chevron-right"
+              @hideText={{true}}
               @route="cases.case.subcases"
               @model={{row.id}}
-            />
+            >
+              {{t "open"}}
+            </AuLink>
           </td>
         </c.body>
         {{! template-lint-enable no-invalid-interactive }}
