--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -90,15 +90,15 @@
         </div>
       </div>
       <div class="auk-o-grid-col-1">
-        <Auk::Button
+        <AuButton
+          data-test-route-search-trigger
           @skin="primary"
           @icon="search"
           @block="true"
-          data-test-route-search-trigger
           type="submit"
         >
           {{t "search"}}
-        </Auk::Button>
+        </AuButton>
       </div>
     </form>
   </Auk::Navbar>
