--- a/app/templates/settings/overview.hbs
+++ b/app/templates/settings/overview.hbs
@@ -1,53 +1,53 @@
 <div class="auk-u-m-8 auk-o-flex auk-o-flex--wrap">
   <div class="auk-u-m-2">
-    <Auk::Button
-      @skin="tertiary"
+    <AuLink
+      data-test-route-settings-overview-manage-emails
+      @skin="button-secondary"
       @icon="pencil"
       @route="settings.emails"
-      data-test-route-settings-overview-manage-emails
     >
       {{t "manage-emails"}}
-    </Auk::Button>
+    </AuLink>
   </div>
   <div class="auk-u-m-2">
-    <Auk::Button
-      @skin="tertiary"
+    <AuLink
+      data-test-route-settings-overview-manage-alerts
+      @skin="button-secondary"
       @icon="pencil"
       @route="settings.system-alerts"
-      data-test-route-settings-overview-manage-alerts
     >
       {{t "manage-alerts"}}
-    </Auk::Button>
+    </AuLink>
   </div>
   <div class="auk-u-m-2">
-    <Auk::Button
-      @skin="tertiary"
+    <AuLink
+      data-test-route-settings-overview-manage-document-types
+      @skin="button-secondary"
       @icon="pencil"
       @route="settings.document-types"
-      data-test-route-settings-overview-manage-document-types
     >
       {{t "manage-document-types"}}
-    </Auk::Button>
+    </AuLink>
   </div>
   <div class="auk-u-m-2">
-    <Auk::Button
-      @skin="tertiary"
+    <AuLink
+      data-test-route-settings-overview-manage-case-types
+      @skin="button-secondary"
       @icon="pencil"
       @route="settings.case-types"
-      data-test-route-settings-overview-manage-case-types
     >
       {{t "manage-case-types"}}
-    </Auk::Button>
+    </AuLink>
   </div>
   <div class="auk-u-m-2">
-    <Auk::Button
-      @skin="tertiary"
+    <AuLink
+      data-test-route-settings-overview-manage-subcase-types
+      @skin="button-secondary"
       @icon="pencil"
       @route="settings.subcase-types"
-      data-test-route-settings-overview-manage-subcase-types
     >
       {{t "manage-subcase-types"}}
-    </Auk::Button>
+    </AuLink>
   </div>
 </div>
 {{outlet}}
