--- a/app/components/agenda/agendaitem/agendaitem-press.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-press.hbs
@@ -8,9 +8,8 @@
     {{#if (not this.currentSession.isEditing)}}
       {{#if (user-may "manage-agendaitems")}}
         <AuButton
-          @skin="secondary"
+          @skin="naked"
           @icon="pencil"
-          @iconAlignment="left"
           {{on "click" this.toggleIsEditing}}
         >
           {{t "edit"}}
