--- a/app/components/utils/government-areas/government-areas-panel.hbs
+++ b/app/components/utils/government-areas/government-areas-panel.hbs
@@ -12,13 +12,14 @@
         <Auk::Toolbar::Group @position="right">
           {{#if (and @allowEditing this.groupGovernmentFieldsByDomain.isIdle)}}
             <Auk::Toolbar::Item>
-              <Auk::Button
+              <AuButton
                 data-test-government-areas-panel-edit
-                @skin="tertiary"
+                @skin="naked"
                 @icon="pencil"
-                @layout="icon-only"
                 {{on "click" this.showEditModal}}
-              />
+              >
+                {{t "edit"}}
+              </AuButton>
             </Auk::Toolbar::Item>
           {{/if}}
         </Auk::Toolbar::Group>
