--- a/app/components/utils/toaster/download-file-toast.hbs
+++ b/app/components/utils/toaster/download-file-toast.hbs
@@ -9,15 +9,15 @@
   >
     <div class="vl-alert__message auk-u-text-capitalize">
       <p>{{@message}}</p>
-      <Auk::Button
-        @skin="secondary"
+      <AuLink
+        @skin="button-secondary"
         @href={{@options.downloadLink}}
-        download
-        class="auk-u-mt-4"
         {{on "click" @options.onClose}}
+        class="auk-u-mt-4"
+        download
       >
         {{t "download"}}
-      </Auk::Button>
+      </AuLink>
     </div>
   </WebComponents::VlAlert>
 </ClickOutside>
