--- a/app/components/web-components/vl-modal-footer.hbs
+++ b/app/components/web-components/vl-modal-footer.hbs
@@ -3,28 +3,30 @@
 <Auk::Toolbar @size="large">
   <Auk::Toolbar::Group @position="left">
     <Auk::Toolbar::Item>
-      <Auk::ButtonLink
-        {{action "cancelAction"}}
+      <AuButton
         data-test-vl-modal-footer-cancel
+        @skin="naked"
+        {{action "cancelAction"}}
       >
         {{this.cancelButtonText}}
-      </Auk::ButtonLink>
+      </AuButton>
     </Auk::Toolbar::Item>
   </Auk::Toolbar::Group>
   <Auk::Toolbar::Group @position="right">
     <Auk::Toolbar::Item>
-      <Auk::Button
+      <AuButton
+        data-test-vl-modal-footer-save={{true}}
         @skin="primary"
         {{!-- also disable button when 'isLoading', since no loading state on button is available.
           Disabling the button while in loading state is important in order to avoid multiple
           action calls when clicking multiple times on the same confirm-button --}}
-        disabled={{or this.disableSave this.isLoading}}
-        {{!-- loadingText=(t "please-be-patient") isLoading=isLoading --}}
-        data-test-vl-modal-footer-save={{true}}
+        @disabled={{or this.disableSave this.isLoading}}
+        {{!-- @loading={{this.isLoading}}
+        @loadingMessage={{t "please-be-patient"}} --}}
         {{action "saveAction"}}
       >
         {{this.saveButtonText}}
-      </Auk::Button>
+      </AuButton>
     </Auk::Toolbar::Item>
   </Auk::Toolbar::Group>
 </Auk::Toolbar>
