--- a/app/templates/cases/case/subcases/subcase/documents.hbs
+++ b/app/templates/cases/case/subcases/subcase/documents.hbs
@@ -13,17 +13,17 @@
           {{#if this.model.pieces.length}}
             <Group.Item>
               {{#if (user-may "manage-documents")}}
-                <Auk::Button
+                <AuButton
                   data-test-route-cases---subcase-documents-batch-edit
                   @icon="pencil"
                   {{on "click" this.openBatchDetails}}
                 >
                   {{t "batch-edit"}}
-                </Auk::Button>
+                </AuButton>
               {{else}}
-                <Auk::Button {{on "click" this.openBatchDetails}}>
+                <AuButton {{on "click" this.openBatchDetails}}>
                   {{t "view-documents-details"}}
-                </Auk::Button>
+                </AuButton>
               {{/if}}
             </Group.Item>
           {{/if}}
@@ -44,14 +44,14 @@
 
       {{#if (user-may "manage-documents")}}
         <div class="auk-u-mb-4">
-          <Auk::Button
+          <AuButton
             data-test-route-cases---subcase-documents-add
-            @skin="tertiary"
+            @skin="naked"
             @icon="plus"
             {{on "click" this.openPieceUploadModal}}
           >
             {{t "documents-add"}}
-          </Auk::Button>
+          </AuButton>
         </div>
       {{/if}}
 
