--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -56,15 +56,15 @@
         />
       </div>
       <div class="auk-form-group au-u-margin-bottom-none au-u-1-6">
-        <Auk::Button
+        <AuButton
+          data-test-route-search-trigger
           @skin="primary"
           @icon="search"
-          @block="true"
-          data-test-route-search-trigger
+          @block={{true}}
           type="submit"
         >
           {{capitalize (t "search")}}
-        </Auk::Button>
+        </AuButton>
       </div>
     </form>
   </Auk::Navbar>
@@ -183,13 +183,15 @@
                       </Auk::StatusPill>
                     </td>
                     <td class="auk-u-text-align--right">
-                      <Auk::Button
-                        @skin="borderless"
-                        @layout="icon-only"
+                      <AuLink
+                        @skin="button-naked"
                         @icon="chevron-right"
+                        @hideText={{true}}
                         @route="publications.publication.index"
                         @model={{row.id}}
-                      />
+                      >
+                        {{t "open"}}
+                      </AuLink>
                     </td>
                   </c.body>
                 </table.content>
