--- a/app/templates/search/cases.hbs
+++ b/app/templates/search/cases.hbs
@@ -93,13 +93,15 @@
                 {{moment-format row.sessionDates}}
               </td>
               <td class="auk-u-text-align--right">
-                <Auk::Button
-                  @skin="borderless"
-                  @layout="icon-only"
+                <AuLink
+                  @skin="button-naked"
                   @icon="chevron-right"
+                  @hideText={{true}}
                   @route="cases.case.subcases"
                   @model={{row.id}}
-                />
+                >
+                  {{t "open"}}
+                </AuLink>
               </td>
             </c.body>
           </table.content>
