KAS-3594 Adjust print styling

--- a/app/styles/print/_general.scss
+++ b/app/styles/print/_general.scss
@@ -29,7 +29,7 @@
   /* Auk overrides
    ========================================================================== */
 
-  .auk-button-link {
+  .au-c-button {
     display: none;
   }
 
