KAS-3594 Replace block argument on button components

--- a/app/templates/newsletters/search.hbs
+++ b/app/templates/newsletters/search.hbs
@@ -51,7 +51,7 @@
           data-test-route-search-trigger
           @skin="primary"
           @icon="search"
-          @block={{true}}
+          @width="block"
           type="submit"
         >
           {{t "search"}}
