--- a/app/templates/publications/overview/search.hbs
+++ b/app/templates/publications/overview/search.hbs
@@ -60,7 +60,7 @@
           data-test-route-search-trigger
           @skin="primary"
           @icon="search"
-          @block={{true}}
+          @width="block"
           type="submit"
         >
           {{capitalize (t "search")}}
