--- a/app/templates/search.hbs
+++ b/app/templates/search.hbs
@@ -89,12 +89,12 @@
           />
         </div>
       </div>
-      <div class="auk-o-grid-col-1">
+      <div class="auk-o-grid-col-2">
         <AuButton
           data-test-route-search-trigger
           @skin="primary"
           @icon="search"
-          @block="true"
+          @width="block"
           type="submit"
         >
           {{t "search"}}
