KAS-3667 refactor requestedForMeeting link between meeting and subcase

--- a/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
@@ -1,4 +1,4 @@
-<div {{did-update (perform this.loadAgendaData) @subcase.requestedForMeeting}}>
+<div {{did-update (perform this.loadAgendaData)}}>
   <div class="auk-o-flex auk-o-flex--align-baseline">
     <h3 class="auk-h2">
       {{t "subcase"}}
