KAS-3612 implement multiple meetings on subcase views part 1

--- a/app/components/agenda/agendaitem/agendaitem-postponed.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-postponed.hbs
@@ -2,7 +2,7 @@
   <div class="auk-alert__body">
     <Auk::Badge @icon="alert-triangle" @skin={{"warning"}} />
     <div class="auk-alert__text">
-      <p class="auk-u-text-pre-line auk-alert__message">
+      <p class="auk-alert__message">
         {{t "postponed-item"}}
       </p>
     </div>
