--- a/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
+++ b/app/components/subcase/subcase-description-panel/subcase-description-view.hbs
@@ -47,13 +47,17 @@
           data-test-subcase-description-meeting-number
           class="auk-key-value-item__value"
         >
-          {{#if this.allMeetings}}
-            {{#each this.allMeetings as |meeting|}}
-              {{meeting.number}}{{if (has-next meeting this.allMeetings) ", "}}
-            {{/each}}
-          {{else}}
-            {{t "no-number-yet"}}
-          {{/if}}
+        {{#if this.loadAgendaData.isRunning}}
+            <div class="auk-loader" role="alert" aria-busy="true"></div>
+        {{else if this.modelsOfMeetings}}
+          {{#each this.modelsOfMeetings as |models|}}
+            {{#let models.[0] as |meeting|}}
+              {{meeting.number}}{{if (has-next models this.modelsOfMeetings) ", "}}
+            {{/let}}
+          {{/each}}
+        {{else}}
+          {{t "no-number-yet"}}
+        {{/if}}
         </div>
       </div>
       <div class="auk-key-value-item">
@@ -83,28 +87,32 @@
         <div class="auk-key-value-item__value">
           {{#if this.loadAgendaData.isRunning}}
             <div class="auk-loader" role="alert" aria-busy="true"></div>
+          {{else if this.modelsOfMeetings}}
+            {{#each this.modelsOfMeetings as |models| }}
+              {{#let models.[0] models.[1] models.[2] as |meeting agenda agendaitem|}}
+              {{!-- TODO KAS-3612 this used to be shown, but seems a bit much with multiple meetings --}}
+              {{!-- {{#let models.[0] models.[1] models.[2] models.[3] as |meeting agenda agendaitem resultCode|}} --}}
+                {{!-- {{#if resultCode.isPostponed}}
+                  {{t "postponed-subcase"}}
+                {{/if}}
+                {{#if resultCode.isRetracted}}
+                  {{t "retracted-subcase"}}
+                {{/if}} --}}
+                <Auk::ButtonLink
+                  data-test-subcase-description-agenda-link
+                  @route="agenda.agendaitems.agendaitem"
+                  @models={{array
+                    meeting.id
+                    agenda.id
+                    agendaitem.id
+                  }}
+                >
+                  {{moment-format meeting.plannedStart "DD MMMM YYYY"}}
+                </Auk::ButtonLink>
+              {{/let}}
+            {{/each}}
           {{else}}
-            {{#if this.latestMeeting.plannedStart}}
-              {{#if this.isPostponed}}
-                {{t "postponed-subcase"}}
-              {{/if}}
-              {{#if this.isRetracted}}
-                {{t "retracted-subcase"}}
-              {{/if}}
-              <Auk::ButtonLink
-                data-test-subcase-description-agenda-link
-                @route="agenda.agendaitems.agendaitem"
-                @models={{array
-                  this.latestMeeting.id
-                  this.latestAgenda.id
-                  this.latestAgendaitem.id
-                }}
-              >
-                {{moment-format this.latestMeeting.plannedStart "DD MMMM YYYY"}}
-              </Auk::ButtonLink>
-            {{else}}
-              {{t "not-yet-on-agenda"}}
-            {{/if}}
+            {{t "not-yet-on-agenda"}}
           {{/if}}
         </div>
       </div>
